# Projekt_ZbiorDanych

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml
data/processed/: cleaned_listings.csv
data/raw/: raw_listings.csv
docs/: opis_projektu.docx
src/: main.py
src/analysis/: bargain_finder.py  clustering.py  regression.py  statistics.py
src/cleaning/: filter.py  normalizer.py
src/scraper/: browser.py  crawler.py  parser.py
src/utils/: config_loader.py  logger.py
tests/: test_analysis.py  test_cleaning.py  test_parser.py  test_pipeline.py  test_scraper.py
